# ServerlessPy

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  setup.py  test.dpios.sh
aws_spy/: __init__.py  dependencies.py  main.py  responses.py  test.py
aws_spy/client/: test_client.py
aws_spy/core/: __init__.py  encoders.py  event_utils.py  exceptions.py  logging.py  params.py  params_alias.py  responses.py  schemas.py  schemas_utils.py  types.py  utils.py
aws_spy/helpers/: cli.py  documentation.py  exceptions.py  utils.py
aws_spy/layer/: spy-layer.yml
aws_spy/layer/spy/python/annotated_types/: __init__.py
aws_spy/layer/spy/python/pydantic_core/: __init__.py  _pydantic_core.pyi  core_schema.py
serverlesspy/: __init__.py  cli.py  main.py  spy.py
serverlesspy/core/: __init__.py  config.py  params.py  params_alias.py  schemas.py  schemas_utils.py  utils.py
serverlesspy/helpers/: cli.py  documentation.py  exceptions.py  types.py  utils.py
serverlesspy/layer/: spy-layer.yml
tests/: conftest.py  test_app.py
tests/data/: serverless_file.yml  serverless_file_without_functions.yml
tests/e2e/: test_api_functions.py
tests/integration/: test_app.py  test_generate_serverless_file.py  test_params.py  test_request_body.py  test_response_class.py  test_test_client.py
tests/unit/: test_encoders.py  test_event_utils.py  test_params.py  test_request_body.py  test_responses.py  test_utils.py
