[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aws-spy"
authors = [{name = "Dominik Pioś", email = "792954018@wp.pl"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pydantic>=1.0.0",
    "openapi-schema-pydantic>=1.2.0",
    "pyyaml>=6.0",
    "pydantic_yaml>=0.10.0"
]

[project.optional-dependencies]
test = [
    "pytest >=7.1.3,<8.0.0",
    "coverage[toml] >= 6.5.0,< 8.0",
    "mypy == 0.982",
    "ruff == 0.0.138",
    "black == 23.1.0",
    "isort >=5.0.6,<6.0.0",
]

[project.scripts]
aws-spy = "aws_spy.helpers.cli:cli_handler"

[project.urls]
Home = "https://github.com/PiochU19/ServerlessPy"
